[package]
name = "shockwaves"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui_plot = "0.35.0"
ndarray = {version = "0.17.2", features = ["rayon"]}
num = "0.4.3"
rayon = "1.11.0"
rfd = "0.17.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

[profile.profiling]
inherits = "release" # Start with all the release optimizations
debug = true         # Add full debug symbols
